; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_pass_bind.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_pass_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_video = type { i32, i32 }
%struct.image = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gl_video*, i32)* @pass_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pass_bind(%struct.gl_video* %0, i32 %1) #0 {
  %3 = alloca %struct.image, align 4
  %4 = alloca %struct.gl_video*, align 8
  %5 = alloca i32, align 4
  %6 = getelementptr inbounds %struct.image, %struct.image* %3, i32 0, i32 0
  store i32 %1, i32* %6, align 4
  store %struct.gl_video* %0, %struct.gl_video** %4, align 8
  %7 = load %struct.gl_video*, %struct.gl_video** %4, align 8
  %8 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load %struct.gl_video*, %struct.gl_video** %4, align 8
  %11 = load %struct.gl_video*, %struct.gl_video** %4, align 8
  %12 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.gl_video*, %struct.gl_video** %4, align 8
  %15 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds %struct.image, %struct.image* %3, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @MP_TARRAY_APPEND(%struct.gl_video* %10, i32 %13, i32 %16, i32 %18)
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @MP_TARRAY_APPEND(%struct.gl_video*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
